fix: expand/collapse store card on only button click

--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -68,6 +68,7 @@ h1 {
   .loja-card {
     padding: 0.2rem 0.8rem;
     margin-bottom: 8px;
+    cursor: default;
   }
 
   .loja-card-wrapper {
